dcheck_always_on = false
is_component_build = false
is_debug = false
symbol_level = 0
target_cpu = "x86"
target_os="android"
use_custom_libcxx = false
v8_enable_i18n_support = true
v8_enable_pointer_compression = false
v8_enable_sandbox = false
v8_monolithic = true
v8_static_library = true
v8_target_cpu = "x86"
v8_use_external_startup_data = false
