compiler_timing = true
chrome_pgo_phase = 0
clang_use_chrome_plugins = false
dcheck_always_on = false
is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 0
target_cpu = "arm64"
use_blink = false
use_custom_libcxx = false
v8_enable_i18n_support = false
v8_enable_leaptiering = true
v8_enable_pointer_compression = false
v8_enable_sandbox = false
v8_enable_temporal_support = false
v8_enable_webassembly = true
v8_monolithic = true
v8_monolithic_for_shared_library = true
v8_static_library = true
v8_target_cpu = "arm64"
v8_use_external_startup_data = false
